--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = com.provismet
+	archives_base_name = dynamic-fullbright
 
 # Dependencies
 	fabric_version=0.53.0+1.18.2
+	cloth_version=6.4.90
+	modmenu_version=3.2.5
