Fix #4 : Sodium and FRAPI issue.

--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,18 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
-
 	maven { url = uri("https://maven.terraformersmc.com/releases/") }
 	maven { url = uri("https://maven.shedaniel.me/") }
+
+	exclusiveContent {
+        forRepository {
+            maven {
+                name = "Modrinth"
+                url = "https://api.modrinth.com/maven"
+            }
+        }
+        filter { includeGroup "maven.modrinth" }
+	}
 }
 
 dependencies {
@@ -35,6 +39,8 @@ dependencies {
     }
 
 	modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
+
+	modImplementation "maven.modrinth:sodium:${project.sodium_version}"
 }
 
 processResources {
