--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20
+	minecraft_version=1.20.1
 	yarn_mappings=1.20+build.1
 	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.1.1
+	mod_version = 1.1.2
 	maven_group = com.provismet
 	archives_base_name = dynamic-fullbright
 
 # Dependencies
-	fabric_version=0.83.0+1.20
+	fabric_version=0.86.1+1.20.1
 	cloth_version=11.0.99
 	modmenu_version=7.0.1
+	sodium_version=hiO9bwqc
